--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.datasource.url =jdbc:mysql://localhost:3306/user
-spring.datasource.username=root
-spring.datasource.password=qwerty1@
+spring.datasource.url =jdbc:mysql://localhost:3306/mysql
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.username=youruser
+spring.datasource.password=yourpass
 
 string.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
